@@ -38,6 +38,9 @@
 <p>2015-01-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/error.c (MagickFatalError): Document that
+MagickFatalError() is not supposed to return (program must quit)
+and add GCC/Clang hints to that effect.</li>
 <li>magick/bit_stream.c (BitAndMasks): Avoid possible access
 one-beyond end of BitAndMasks array.  It is not clear if there is
 a possible bug with 32-bit quantums.  If there is a bug, it has
