@@ -209,7 +209,7 @@ void MagickFatalError( const <a class="reference external" href="../api/types.ht
 <div class="section" id="id12">
 <h2>Description</h2>
 <p>MagickFatalError() calls the fatal error handler methods with an error
-reason.</p>
+reason.  The fatal error handler is not expected to return!</p>
 <p>The format of the MagickError method is:</p>
 <pre class="literal-block">
 void MagickFatalError( const <a class="reference external" href="../api/types.html#exceptiontype">ExceptionType</a> error, const char *reason,
